--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>My To-Do List</h1>
+        <h1>My To-Do List....</h1>
         <input type="text" id="task" placeholder="Add a new task">
-        <button id="addBtn">Add</button>
+        <button id="addBtn">create</button>
         <ul id="taskList">
             <!-- Tasks will be added here dynamically -->
         </ul>
